[workspace]
members = ["crates/cli", "crates/dive", "crates/to_df"]

# Explicitly set the resolver to version 2, which is the default for packages with edition >= 2021 but not virtual workspaces.
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"
[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
exclude = [".github/"]


[workspace.dependencies]
reqwest = { version = "0.12.4", features = ["json"] }
serde_json = "1.0.70"
anyhow = "1.0.44"
tokio = { version = "1.16.1", features = ["full"] }
governor = "0.6.0"
indexmap = "2.2.6"
polars = { version = "0.40.0", features = ["parquet"] }
serde = "1.0.130"
serde_json_diff = "0.2.0"
