[package]
name = "dive"
version.workspace = true
edition.workspace = true
license.workspace = true
exclude.workspace = true

[dependencies]
reqwest = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
governor = { workspace = true }
indexmap = { workspace = true }
polars = { workspace = true }
to_df = { path = "../to_df" }
serde = { workspace = true }
serde_json_diff = { workspace = true }
